dark mode light mode color changed and few bug fixes

--- a/app/globals.css
+++ b/app/globals.css
@@ -89,7 +89,7 @@
 
 :root {
 
-  --background: oklch(1 0 0);
+  --background: #f5f5f5;
 
   --foreground: oklch(0.145 0 0);
 
@@ -156,7 +156,7 @@
 
 .dark {
 
-  --background: oklch(0.045 0 0);
+  --background: #0a0a0a;
 
   --foreground: oklch(0.985 0 0);
 
